--- a/Login_Register/index.html
+++ b/Login_Register/index.html
@@ -34,7 +34,7 @@
                         <h2>Iniciar Sesión</h2>
                         <input type="text" placeholder="Correo Electronico">
                         <input type="password" placeholder="Contraseña">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block" ><a href="/InfoBancaria.html">Inicio de secion</a></button >
+                        <button type="submit" class="btn btn-primary btn-lg btn-block" ><a href="Inicio.html">Inicio de secion</a></button >
 
                     </form>
 
