esta cosa no se que hace

--- a/Login_Register/Inicio.html
+++ b/Login_Register/Inicio.html
@@ -34,10 +34,10 @@
                 <a class="nav-link active" aria-current="page" href="">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Rastreo de envio</a>
+                <a class="nav-link" href="traking.html">Rastreo de envio</a>
               </li>
 			  <li class="nav-item">
-                <a class="nav-link" href="#">Solicitud de envio</a>
+                <a class="nav-link" href="solicitud.html">Solicitud de envio</a>
               </li>
 
             </ul>
