--- a/Login_Register/traking.html
+++ b/Login_Register/traking.html
@@ -31,27 +31,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="Inicio.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Busquedas</a>
+                <a class="nav-link" href="traking.html">Rastreo de envio</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Cuentas
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Cuenta de Ahorro</a></li>
-                  <li><a class="dropdown-item" href="#">Creditos activos</a></li>
-									<li><a class="dropdown-item" href="#">Productos de Ahorro</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+			  <li class="nav-item">
+                <a class="nav-link" href="solicitud.html">Solicitud de envio</a>
               </li>
+
             </ul>
           </div>
         </div>
-      </nav>
+      </nav>>
 
 			<input id="condi" value="CreaProd" readonly hidden>
 			<div class="card crdbody">
@@ -66,6 +58,46 @@
 												<option>Coban</option>
 												<option>Carcha</option>
 												<option>chamelco</option>
+												<option>Guatemala</option>
+												<option>Ciudad de Guatemala</option>
+												<option>Villa Nueva</option>
+												<option>Mixco</option>
+												<option>Quetzaltenango</option>
+												<option>San Juan Sacatepéquez</option>
+												<option>Villa Canales</option>
+												<option>Escuintla</option>
+												<option>Chinautla</option>
+												<option>Chimaltenango</option>
+												<option>Chichicastenango</option>
+												<option>Amatitlán</option>
+												<option>Cobán</option>
+												<option>Jalapa</option>
+												<option>Antigua Guatemala</option>
+												<option>Tecpán Guatemala</option>
+												<option>Zacapa</option>
+												<option>San Marcos</option>
+												<option>Retalhuleu</option>
+												<option>Santa Lucía Cotzumalguapa</option>
+												<option>San Benito</option>
+												<option>San Francisco</option>
+												<option>San Andrés</option>
+												<option>San José</option>
+												<option>Santa Ana</option>
+												<option>Santa Cruz</option>
+												<option>Sayaxché</option>
+												<option>Dolores</option>
+												<option>La Libertad</option>
+												<option>Poptún</option>
+												<option>Flores</option>
+												<option>San Luis</option>
+												<option>San Miguel</option>
+												<option>San Pedro</option>
+												<option>El Chal</option>
+												<option>Las Cruces</option>
+												<option>Melchor de Mencos</option>
+												<option>La Blanca</option>
+												<option>Tikal</option>
+												<option>Uaxactún</option>	
 												<option selected>------</option>
 											</select>
 											</div>
@@ -128,7 +160,7 @@
 									<tbody>
 										<tr>
 											<th scope="row">1</th>
-											<td>Pago Luz</td>
+											<td>Num Luz</td>
 											<td>500.00</td>
 											<td>20-04-2023</td>
 											<td>00-111-090</td>
