--- a/Login_Register/traking.html
+++ b/Login_Register/traking.html
@@ -52,7 +52,7 @@
 							<div class="card-body">
 							<!-- FORMULARIO DE PRUEBAS   --->
 							<div class="row crdbody">
-									<div class=" col-md-3"><div class="input-group">
+									<div class=" col-md-4"><div class="input-group">
 											<span class="input-group-text fw-bold">Agencia</span>
 											<select id="CODAgencia" class="form-select">
 												<option>Coban</option>
@@ -103,8 +103,8 @@
 											</div>
 									</div>
 	
-									<div class="form-group col-sm-3"><div class="input-group">
-											<span class="input-group-text">Cod.Usuario</span>
+									<div class="form-group col-sm-4"><div class="input-group">
+											<span class="input-group-text">Cod.guia</span>
 													<input type="text" class="form-control" id="codcre" value="" required>
 											</div>
 									</div>
@@ -115,16 +115,7 @@
 											</div>
 									</div>
 	
-									<div class="form-group col-sm-2"><div class="input-group">
-											<span class="input-group-text">moneda</span>
-											<select id="Mon" class="form-select">
-													<option>GTQ</option>
-													<option>USD</option>
-													<option>EUR</option>
-													<option selected>------</option>
-											</select>
-									</div>
-									</div>
+									
 	
 											</div> <!-- ROW FIN -->
 	
