--- a/Login_Register/traking.html
+++ b/Login_Register/traking.html
@@ -17,7 +17,7 @@
     <script>src="js/functions.js"</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-qRkZ0y1sdo/VrXlTv5J0tN5eCO/1Eao/V/5qkj6rJ6gh9/M5vLcRJ3bdvLQcI23iUvj7hL4V6JsdvV7W+c55JQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-t42oDrKONJHtddnbgOs4UUI8x/mQ4aCUfeoBIBzxKElVi0qmx0i1WPhBcp4tU8HfC4I+fzuuWE5fH+pi0UUrPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Referencia al archivo JavaScript de Bootstrap -->
+  <!-- Referencia al artrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-N1V4aEwOJxkRnlvDv9A6HivuF1txd5mUhHAA4ojz79I5Oh+dpvC7JrtbNVrZdYiZ58p41dKxlLxEFO3KTwX+sg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
